# tidy_email

./: .gitignore  README.md  coverage.sh  dune-project  format.sh  tidy_email.opam  tidy_email_mailgun.opam  tidy_email_sendgrid.opam  tidy_email_smtp.opam
.github/: FUNDING.yml
.github/workflows/: test.yml
lib/src/: backend.ml  backend.mli  email.mli  list_backend.ml  list_backend.mli
lib_mailgun/src/: mailgun.ml  mailgun.mli
lib_smtp/src/: smtp.ml  smtp.mli
mailgun/example/: dune  html_email.ml  send.ml  send.sh.template  text_email.ml
mailgun/src/: dune  mailgun.ml  mailgun.mli  tidy_email_mailgun.ml  tidy_email_mailgun.mli
mailgun/test/: dune  test_send.ml  test_tidy_email_mailgun.ml
sendgrid/example/: dune  send.ml  send.sh.template  text_email.ml
sendgrid/src/: dune  sendgrid.ml  sendgrid.mli  tidy_email_sendgrid.ml  tidy_email_sendgrid.mli
sendgrid/test/: dune  test_send.ml  test_tidy_email_sendgrid.ml
smtp/example/: dune  html_email.ml  send.ml  send.sh.template
smtp/src/: dune  smtp.ml  smtp.mli  tidy_email_smtp.ml  tidy_email_smtp.mli
tidy_email/src/: dune  email.ml  email.mli  list_backend.ml  list_backend.mli
